// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an user should be able to create a stripe account 1`] = `
Object {
  "createStripeAccount": Object {
    "title": "Community",
  },
}
`;

exports[`an user should not be able to create community if providing a non-existent communityId 1`] = `
Array [
  [GraphQLError: You must provide a valid community Id],
]
`;

exports[`an user should not be able to create community stripe account if not community creator 1`] = `
Array [
  [GraphQLError: You must be this community creator to create a Stripe account],
]
`;

exports[`an user should not be able to create community stripe account if not logged 1`] = `
Array [
  [GraphQLError: You must be connected to create a Stripe account],
]
`;
